<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.EditActivity">

    <EditText
        android:id="@+id/edit_old_password"
        android:layout_width="238dp"
        android:layout_height="65dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_old_password"
        android:importantForAccessibility="no"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_password" />

    <Button
        android:id="@+id/edit_complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="28dp"
        android:onClick="editClick"
        android:text="@string/edit_complete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_old_password" />

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="241dp"
        android:layout_height="74dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edit_first_name"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="235dp"
        android:layout_height="56dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_last_name"
        android:importantForAccessibility="no"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_first_name" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="238dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/edit_text_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_last_name" />

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="245dp"
        android:layout_height="66dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/edit_new_password"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

</androidx.constraintlayout.widget.ConstraintLayout>